# spdx-license-list

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: update.yaml
src/spdx_license_list/: __init__.py
