[build-system]
requires = ["poetry_core>=1.0.8"]
build-backend = "poetry.core.masonry.api"


[tool.black]
target-version = ["py39"]
line-length = 79  # default: 88


[tool.isort]
atomic = true
profile = "black"
py_version = 39
add_imports = ["from __future__ import annotations"]
lines_after_imports = 2


[tool.mypy]
python_version = 3.9
enable_error_code = [
    "ignore-without-code",
]
strict = true


[tool.poetry]
authors = ["JJMC89"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
description = "SPDX License List as a Python dictionary"
license = "MIT"
name = "spdx-license-list"
readme = "README.md"
repository = "https://github.com/JJMC89/spdx-license-list"
version = "3.26.0"

[tool.poetry.dependencies]
python = ">=3.9"
