[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"


[project]
authors = [
    { name = "JJMC89" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
description = "SPDX License List as a Python dictionary"
license = { text = "MIT" }
name = "spdx-license-list"
readme = "README.md"
requires-python = ">=3.10"
version = "3.27.0"

[project.urls]
source = "https://github.com/JJMC89/spdx-license-list"


[tool.black]
target-version = ["py310"]
line-length = 79  # default: 88


[tool.isort]
add_imports = ["from __future__ import annotations"]
atomic = true
profile = "black"
py_version = 310


[tool.mypy]
python_version = 3.10
enable_error_code = [
    "ignore-without-code",
]
strict = true
